fix close button position tablet

--- a/style.css
+++ b/style.css
@@ -618,7 +618,7 @@ header .menu__border {
     float: left;
     clear: none;
     text-align: inherit;
-    width: 46.0155%;
+    width: 48.49%;
     margin-left: 3.363300000000001%;
     margin-right: 1%;
   }
